--- a/src/scss/base/_b-base.scss
+++ b/src/scss/base/_b-base.scss
@@ -5,8 +5,7 @@
 }
 
 body {
-  background: rgb(170,170,170);
-  background: radial-gradient(circle, rgba(70, 70, 70,1) 0%, rgba(0,0,0,1) 80%);
+  background-color: black;
   font-family: 'Outfit', sans-serif;
   height: 100svh;
   line-height: 1.125;
